# photo-a-day-aligner-semiautomatic

./: CMakeLists.txt  README.md  images.txt  imageswindow.cpp  imageswindow.h  main.cpp  window_lane_crops.txt
